# Oblivion

./: Cargo.toml  README.md
examples/: _custom_shader.rs  bunnymark.rs  common.rs  custom.wgsl  custom_red_only.wgsl  custom_shader.rs  draw_canvas.rs  draw_image.rs  draw_image_batch.rs  draw_mesh.rs  draw_meshes.rs  draw_projection.rs  draw_text.rs  draw_transform.rs
resources/shaders/: mesh.wgsl  quadtex.wgsl  shader.wgsl  text_shader.wgsl
src/: canvas.rs  context.rs  custom_shader.rs  error.rs  helpers.rs  internal.rs  lib.rs  shader.rs
src/drawables/: image.rs  mesh.rs  text.rs
src/pipelines/: custom_pipeline.rs  mesh_pipeline.rs  mod.rs  texture_pipeline.rs
src/renderables/: canvas.rs  image.rs  image_batch.rs  mesh.rs  mod.rs  text.rs
src/vertices/: image_vertex.rs  mesh_vertex.rs  mod.rs
