[package]
name = "oblivion"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
wgpu = { version = "0.12.0" }
pollster = "0.2.4"
raw-window-handle = "0.4.2"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
glam = "0.20.2"
glyph_brush = "0.7.2"
rgb = "0.8.27"
mint = "0.5.8"
thiserror = "1.0.30"
lyon = "0.17.10"

[dev-dependencies]
winit = "0.26.1"
image = "0.24.0"
rand = "0.8.4"